--- a/pages/content/src/modal.css
+++ b/pages/content/src/modal.css
@@ -1,4 +1,5 @@
 body.active-modal {
+    height: 100%;
     overflow-y: hidden;
 }
 
@@ -17,11 +18,13 @@ body.active-modal {
     right: 0;
     bottom: 0;
     position: fixed;
+    z-index: 1000;
 }
 
 .overlay {
     background: rgba(49,49,49,0.8);
 }
+
 .modal-content {
     position: absolute;
     top: 40%;
@@ -33,6 +36,7 @@ body.active-modal {
     border-radius: 3px;
     max-width: 600px;
     min-width: 300px;
+    z-index: 1001;
 }
 
 .close-modal {
