--- a/pages/content/src/modal.css
+++ b/pages/content/src/modal.css
@@ -3,13 +3,6 @@
     overflow-y: hidden;
 }
 
-.btn-modal {
-    padding: 10px 20px;
-    display: block;
-    margin: 100px auto 0;
-    font-size: 18px;
-}
-
 .modal, .overlay {
     width: 100vw;
     height: 100vh;
@@ -31,11 +24,11 @@
     left: 50%;
     transform: translate(-50%, -50%);
     line-height: 1.4;
-    background: #f1f1f1;
+    background: #f3f4f6;
     padding: 14px 28px;
     border-radius: 3px;
     max-width: 600px;
-    min-width: 300px;
+    min-width: 600px;
     z-index: 1001;
 }
 
@@ -44,4 +37,18 @@
     top: 10px;
     right: 10px;
     padding: 5px 7px;
+    font-size: 14px;
+    color: #374151;
+    background-color: #f3f4f6;
+    border: none;
+}
+
+h2 {
+    font-size: 32px;
+    color: #374151;
+}
+
+p {
+    font-size: 14px;
+    color: #5F6774;
 }
