--- a/pages/content/src/modal.css
+++ b/pages/content/src/modal.css
@@ -1,9 +1,9 @@
-.active-modal {
+.pp-active-modal {
     height: 100%;
     overflow-y: hidden;
 }
 
-.modal, .overlay {
+.pp-modal, .pp-overlay {
     width: 100vw;
     height: 100vh;
     top: 0;
@@ -11,14 +11,14 @@
     right: 0;
     bottom: 0;
     position: fixed;
-    z-index: 1000;
+    z-index: 10000;
 }
 
-.overlay {
+.pp-overlay {
     background: rgba(49,49,49,0.8);
 }
 
-.modal-content {
+.pp-modal-content {
     position: absolute;
     top: 40%;
     left: 50%;
@@ -30,12 +30,12 @@
     width: 700px;
     max-height: 600px;
     overflow-y: auto;
-    z-index: 1001;
+    z-index: 10001;
     font-family: Verdana, sans-serif;
     box-sizing: content-box;
 }
 
-.close-modal {
+.pp-close-modal {
     position: absolute;
     top: 10px;
     right: 10px;
@@ -46,18 +46,18 @@
     border: none;
 }
 
-.modal-title {
+.pp-modal-title {
     font-size: 32px;
     color: #374151;
     margin-bottom: 20px;
 }
 
-.section-title {
+.pp-section-title {
     font-size: 18px;
     color: #374151;
 }
 
-.section-text {
+.pp-section-text {
     font-size: 14px;
     color: #5F6774;
     margin-bottom: 10px;
