--- a/pages/options/src/Options.css
+++ b/pages/options/src/Options.css
@@ -1,14 +1,5 @@
-#app-container {
+/* #app-container {
   text-align: center;
   width: 100vw;
   height: 100vh;
-}
-
-.App {
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
+} */
